# Learning-Django

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  manage.py
src/mysite/: settings.py  urls.py
src/polls/: admin.py  models.py  tests.py  urls.py  views.py
src/polls/migrations/: 0001_initial.py
src/polls/templates/polls/: detail.html  index.html  results.html
