[project]
name = "djangotutorial"
version = "0.4.0"
description = "learning django from the list"
readme = "README.md"
authors = [{ name = "Felipe", email = "batatasteve304@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["django>=5.2.4"]

[dependency-groups]
dev = [
 "python-dotenv>=1.1.1",
]

[project.scripts]
manage = "manage:main"

[tool.uv]
package = true
