[project]
name = "djangotutorial"
version = "1.0.0"
description = "learning django from the list"
readme = "README.md"
authors = [{ name = "Felipe", email = "batatasteve304@gmail.com" }]
requires-python = ">=3.12.11"
dependencies = [
    "django>=5.2.4",
    "django-debug-toolbar>=5.2.0",
]

[dependency-groups]
dev = [
    # just for type checking
    "django-types>=0.21.0",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
]

[project.scripts]
manage = "manage:main"

[tool.uv]
package = true

# Just for type checking
[tool.basedpyright]
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportUninitializedInstanceVariable = false
reportAny = false
reportUnusedCallResult = false
